--- a/AnimeHubClient/Layout/NavBar.razor
+++ b/AnimeHubClient/Layout/NavBar.razor
@@ -27,6 +27,10 @@
                     <NavLink class="nav-link" href="/animes">Catalog</NavLink>
                 </li>
 
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/my-watchlist">Watchlist</NavLink>
+                </li>
+
                 <AuthorizeView Roles="Admin">
                     <li class="nav-item dropdown">
                         <NavLink class="nav-link" href="#" data-bs-toggle="dropdown">
